css/main.css
/* ... */
/* end -------------------- */
/* Сетка карточки товара  */
.card-grid p {
  margin: 0;
}
.card-grid__body {
  margin: 0 0 32px 0;
}
.card-grid__main {
  display: flex;
  justify-content: space-between;
  align-items: start;
}
.card-grid__left {
  min-width: 0px;
  flex: 0 0 70%;
  margin-right: 16px;
  display: flex;
  flex-wrap: wrap;
}
.card-grid__left .card-tab {
  min-width: 0px;
  margin-top: 16px;
  flex: 0 0 100%;
}
.card-grid__gallery {
  min-width: 0px;
  flex: 0 0 50%;
  margin-right: 16px;
}
.card-grid__description {
  min-width: 0px;
  flex: 1 1 auto;
}
.card-grid__right {
  flex: 1 1 auto;
}
.card-grid__right .card-tile:not(:last-child) {
  margin-bottom: 16px;
}
.card-grid .share {
  margin-top: 20px;
}
.card-grid__video {
  position: relative;
  width: 100%;
  padding-bottom: 60%;
  margin: 20px 0;
}
@media screen and (max-width: 1200px) {
  .card-grid__left {
    flex: 0 0 62%;
  }
}

/* end -------------------- */
/* Стили шапки карточки товара  */
.card-head {
  padding: 16px;
  padding-top: 10px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin-bottom: 16px;
}
.card-head__title {
  font-family: "Poppins", sans-serif;
  font-weight: 700;
  font-size: 34px;
  color: #000;
  line-height: 100%;
  margin: 0 0 15px 0;
}
.card-head__favorites::before {
  color: #ff9138;
  font-size: 40px;
}

/* end -------------------- */
/* Стили навигации  */
.card-nav {
  margin-bottom: 16px;
  display: flex;
}
.card-nav__item {
  padding: 0 16px;
  position: relative;
}
.card-nav__item::after {
  content: "";
  height: 25px;
  width: 1px;
  background: #e7e7e7;
  position: absolute;
  top: 50%;
  right: 0;
  transform: translate(0, -50%);
}
.card-nav__item:last-child::after {
  display: none;
}

.card-options {
  display: flex;
  align-items: center;
  justify-content: space-around;
}

/* end -------------------- */
/* Стили галиреии  */
.card-gallery__big {
  margin-bottom: 16px;
}
.slider-gallery-big {
  position: relative;
}
.slider-gallery-big .swiper {
  overflow: hidden;
  position: relative;
}
.slider-gallery-big .swiper:hover .button-prev {
  transform: translate(0%, -50%);
}
.slider-gallery-big .swiper:hover .button-next {
  transform: translate(0%, -50%);
}
.slider-gallery-big__img {
  position: relative;
  padding-bottom: 70%;
  width: 100%;
  border-radius: 10px;
  overflow: hidden;
}
.slider-gallery-big .button-prev,
.slider-gallery-big .button-next {
  width: 40px;
  height: 70px;
  background: rgba(0, 0, 0, 0.3);
  border-radius: 0px;
  position: absolute;
  top: 50%;
  z-index: 3;
  box-shadow: none;
  transition: 0.3s;
}
.slider-gallery-big .button-prev:before,
.slider-gallery-big .button-next:before {
  font-size: 20px;
  color: #999;
}
.slider-gallery-big .button-prev:hover,
.slider-gallery-big .button-next:hover {
  background: rgba(0, 0, 0, 0.6);
}
.slider-gallery-big .button-prev:hover:before,
.slider-gallery-big .button-next:hover:before {
  color: #fff;
}
.slider-gallery-big .button-prev {
  left: 0px;
  transform: translate(-100%, -50%);
}
.slider-gallery-big .button-next {
  right: 0px;
  transform: translate(100%, -50%);
}

.slider-gallery-mini .swiper {
  overflow: hidden;
}
.slider-gallery-mini__img {
  cursor: pointer;
  position: relative;
  height: 90px;
  width: 100%;
  border-radius: 7px;
  overflow: hidden;
}

/* end--------------------*/
/* Стили блока .card-description  */
.card-description {
  border-radius: 10px;
  background: #ffffff;
  box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.1);
}

/* end -------------------- */
/*  Стили блока .card-tab */
.card-tab__btns {
  display: flex;
}
.card-tab__btn {
  padding: 12px 24px;
  background: #ffffff;
  box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.1);
  border-radius: 10px 10px 0 0;
  font-family: "Poppins", sans-serif;
  font-weight: 700;
  font-size: 18px;
  color: #1d1d1b;
  line-height: 130%;
  cursor: pointer;
}
.card-tab__btn:hover {
  color: #ff9138;
  transition: 0.3s;
}
.card-tab__btn.active {
  color: #ff9138;
  position: relative;
  z-index: 4;
}
.card-tab__btn.active::before {
  content: "";
  position: absolute;
  left: 0;
  width: 100%;
  bottom: -18px;
  height: 20px;
  background: #fff;
}
.card-tab__item {
  position: relative;
  z-index: 2;
  padding: 24px 16px;
  background: #ffffff;
  box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.1);
  border-radius: 0 10px 10px 10px;
  display: none;
}
.card-tab__item.active {
  display: block;
}
.card-tab__btn-mob {
  display: none;
}
/* end -------------------- */
/*  Стили блока .card-name */
.card-name {
  display: flex;
  flex-direction: column;
  gap: 5px;
}
.card-name__top {
  display: flex;
  align-items: flex-start;
  gap: 12px;
}
.card-name__photo {
  margin: 0;
  width: 75px;
  height: 75px;
  flex: 0 0 75px;
  position: relative;
  border-radius: 50%;
}
.card-name__photo.online {
  position: relative;
}
.card-name__photo.online::before {
  content: "";
  width: 16px;
  height: 16px;
  background: #33e550;
  position: absolute;
  top: 3px;
  right: 0px;
  border-radius: 50%;
  z-index: 2;
}
.card-name__info {
  display: flex;
  flex-direction: column;
  gap: 4px;
  min-width: 0;
}
.card-name__name {
  font-family: "Poppins", sans-serif;
  font-weight: 700;
  font-size: 14px;
  color: #1d1d1b;
  line-height: 130%;
  text-transform: uppercase;
  margin: 0;
}
.card-name__bottom {
  display: flex;
  align-items: center;
  gap: 10px;
}
.card-name__bottom .network__item {
  width: 22px;
  height: 22px;
  border-radius: 5px;
}
.card-name__bottom .network__item:not(:last-child) {
  margin-right: 4px;
}
.card-name__bottom .network__item:before {
  font-size: 13px;
}
.card-name__text {
  font-family: "Poppins", sans-serif;
  font-weight: 400;
  font-size: 13px;
  color: #797979;
  line-height: 130%;
  margin: 0;
}
.card-name__links {
  display: flex;
  align-items: center;
  gap: 8px;
}
.stars {
  display: flex;
  align-items: center;
}
.stars__body {
  display: flex;
  align-items: center;
}
/* ... */

